Fixed issue where section was too close to page top when using jump links

--- a/sass/ux-design-contest.scss
+++ b/sass/ux-design-contest.scss
@@ -59,6 +59,11 @@ body {
 	line-height: 1.55;
 }
 
+section {
+	margin-top: -9rem;
+	padding-top: 9rem;
+}
+
 h1 {
 	font-size: 4rem;
 	line-height: 1.125;
@@ -1097,11 +1102,6 @@ td {
 
 	.mg-b-400 {
 		margin-bottom: 15rem !important;
-	}
-
-	section {
-		margin-top: -5rem !important;
-		padding-top: 5rem !important;
 	}
 
 	.shapes-group-1 {
